--- a/neatyyli.css
+++ b/neatyyli.css
@@ -1,20 +1,44 @@
 body {
-    background-color: black;
-    color: white;
+    background-color: darkgray;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
-h1 {
-    font-size: 20px;
+#header {
+background-color: grey;
+height: 100px;
+padding-bottom: 10px;
+text-align: center;
 }
-p {
-    font-size: 12px;
-    color: green;
+#nav {
+color: hotpink;
+background-color:beige ;
+padding-bottom: 5px;
+padding-top: 5px;
+height: 15px;
+text-align: center;
 }
-div {
-    border-style: dotted;
-    border-width: 2px;
-    width: 100px;
-    height: 100px;
+section {
+float: left;
+background-color: cyan;
+height: 150px;
+width: 70%;
+
 }
+aside {
+float: right;
+background-color: darkkhaki;
+height: 300px;
+width: 30%;
+
+}
+article {
+float: left;
+background-color: darksalmon;
+height: 150px;
+width: 70%;
+}
+
 
 
 
