--- a/1/eka.css
+++ b/1/eka.css
@@ -1,4 +1,31 @@
-.row {
+.navbar {
     background-color: black;
     color: white;
+    text-decoration: none;
+}
+
+A:visited {
+    color: thistle;
+}
+
+.img-circle {
+    border-radius: 50%;
+    width: 40%;
+    height: 50%;
+}
+
+.col-sm-4 {
+    height: 20%;
+}
+
+h1 {
+    text-align: center;
+}
+
+#container2 {
+    text-align: center;
+}
+
+.container {
+    text-align: center;
 }
