--- a/verkkosivut.css
+++ b/verkkosivut.css
@@ -10,14 +10,15 @@ h1 {
   text-align: center;
   color:white;
   border-style: dotted;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 25%;
+  margin-right: 25%;
   border-color: pink;
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 p {
   color:white;
-  padding-top: 2%;
+  padding-top: 5%;
   text-align: center;
 }
 
@@ -30,8 +31,8 @@ li {
 }
 
 .carousel-item {
-height: 40%;
-padding-top: 5%;
+height: 30%;
+padding-top: 2%;
 }
 
 .navbar-nav .nav-item:hover .nav-link {
