--- a/verkkosivut2.css
+++ b/verkkosivut2.css
@@ -27,6 +27,7 @@ h2 {
     margin-left: 15%;
     margin-right: 15%;
     border-color: pink;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 p {
